--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,49 @@ PyOpenGL-accelerate==3.1.5
 scipy==1.4.1
 six==1.14.0
 wincertstore==0.2
+absl-py==0.9.0
+astunparse==1.6.3
+autopep8==1.5.2
+box2d-py==2.3.8
+cachetools==4.1.0
+certifi==2020.4.5.1
+chardet==3.0.4
+cloudpickle==1.3.0
+future==0.18.2
+gast==0.3.3
+google-auth==1.14.2
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.28.1
+gym==0.17.1
+h5py==2.10.0
+idna==2.9
+Keras==2.3.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+Markdown==3.2.1
+numpy==1.18.4
+oauthlib==3.1.0
+opt-einsum==3.2.1
+protobuf==3.11.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.5.0
+pyglet==1.5.0
+PyOpenGL==3.1.5
+PyOpenGL-accelerate==3.1.5
+PyYAML==5.3.1
+requests==2.23.0
+requests-oauthlib==1.3.0
+rsa==4.0
+scipy==1.4.1
+six==1.14.0
+tensorboard==2.2.1
+tensorboard-plugin-wit==1.6.0.post3
+tensorflow-gpu==2.2.0
+tensorflow-gpu-estimator==2.2.0
+termcolor==1.1.0
+urllib3==1.25.9
+Werkzeug==1.0.1
+wincertstore==0.2
+wrapt==1.12.1
