--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,18 @@
-box2d-py==2.3.8
-certifi==2020.4.5.1
-cloudpickle==1.3.0
-future==0.18.2
-gym==0.17.1
-numpy==1.18.4
-pyglet==1.5.0
-PyOpenGL==3.1.5
-PyOpenGL-accelerate==3.1.5
-scipy==1.4.1
-six==1.14.0
-wincertstore==0.2
 absl-py==0.9.0
 astunparse==1.6.3
+atari-py==0.2.6
 autopep8==1.5.2
 box2d-py==2.3.8
 cachetools==4.1.0
 certifi==2020.4.5.1
+cffi==1.14.0
 chardet==3.0.4
 cloudpickle==1.3.0
+cycler==0.10.0
+Cython==0.29.17
 future==0.18.2
 gast==0.3.3
+glfw==1.11.0
 google-auth==1.14.2
 google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
@@ -27,20 +20,31 @@ grpcio==1.28.1
 gym==0.17.1
 h5py==2.10.0
 idna==2.9
+imageio==2.8.0
 Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
+kiwisolver==1.2.0
+lockfile==0.12.2
 Markdown==3.2.1
+matplotlib==3.2.1
 numpy==1.18.4
 oauthlib==3.1.0
+opencv-python==4.2.0.34
 opt-einsum==3.2.1
+pandas==1.0.3
+Pillow==7.1.2
 protobuf==3.11.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.5.0
+pycparser==2.20
 pyglet==1.5.0
 PyOpenGL==3.1.5
 PyOpenGL-accelerate==3.1.5
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2020.1
 PyYAML==5.3.1
 requests==2.23.0
 requests-oauthlib==1.3.0
